Fixed weird wrapping issues on small screens.

--- a/css/wwwiz.css
+++ b/css/wwwiz.css
@@ -45,14 +45,13 @@ a.btn-primary.btn-ptg:hover {
   z-index: -2;
 }
 
-.section-header {
-  font-family: "Muli", sans-serif;
-  font-weight: 900;
-  text-align: center;
-}
-
 .card {
   font-family: "Roboto", sans-serif;
+  width: 40rem;
+}
+
+.card-title {
+  flex-wrap: nowrap;
 }
 
 .www-bg-black {
@@ -71,13 +70,26 @@ a.btn-primary.btn-ptg:hover {
   color: #ffcc66;
   font-family: "Ultra", serif;
   text-align: center;
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
 }
 
 .coming-soon {
-  margin-top: 2rem;
+  text-align: center;
+  margin-top: 1rem;
 }
 
 .contact-info {
   margin-top: 1rem;
+}
+
+@media screen and (max-width: 388px) {
+  .www-title {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .www-title {
+    font-size: 2.5rem;
+  }
 }
